Bug 5429: Balance sheet report sometimes prints lines with zero amounts. Fixed. https://github.com/FrontAccountingERP/FA/commit/e72f0b009f8e0bbfe4b42aba11aded7f0d2b8c41

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-05-02 Joe Hunt
+Bug 5429: Balance sheet report sometimes prints lines with zero amounts. Fixed.
+M	gl/includes/db/gl_db_trans.inc
+
 2021-03-29 Joe Hunt
 Feature 5388: Print Invoices (documents) list gets too long. Fixed.
 M	admin/company_preferences.php
