--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2021-05-05 Joe Hunt
+Payments & Deposits rounding problem. Fixed.
+M	fixed_assets/includes/fixed_assets_db.inc
+M	includes/ui/items_cart.inc
+
 2021-05-02 Joe Hunt
 Bug 5429: Balance sheet report sometimes prints lines with zero amounts. Fixed.
 M	gl/includes/db/gl_db_trans.inc
