Re-Run Feature 5388: Print Invoices (documents) list gets too long https://github.com/FrontAccountingERP/FA/commit/d93b5b3fa9986a43fc0d458e4a865894b84b9fa3 https://frontaccounting.com/punbb/viewtopic.php?pid=39436#p39436

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-05-12 Joe Hunt
+Re-Run Feature 5388: Print Invoices (documents) list gets too long
+M	reporting/includes/reports_classes.inc
+
 2021-05-05 Joe Hunt
 Payments & Deposits rounding problem. Fixed.
 M	fixed_assets/includes/fixed_assets_db.inc
