Bug 5197: Sales Invoice email subject altered to avoid false marking by spam filters. https://github.com/FrontAccountingERP/FA/commit/707866fb43a172801b25df8e3c20f878eca1e57f

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-05-17 Janusz Dobrowolski
+Bug 5197: Sales Invoice email subject altered to avoid false marking by spam filters.
+M	reporting/rep107.php
+
 2021-05-12 Joe Hunt
 Re-Run Feature 5388: Print Invoices (documents) list gets too long
 M	reporting/includes/reports_classes.inc
