Bug 5245: Added debtors_master.debtor_ref to get_customer_trans() results https://github.com/FrontAccountingERP/FA/commit/541772bc00e5816d404a8859c994d73e59481023

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2021-05-17 Janusz Dobrowolski
+Bug 5245: Added debtors_master.debtor_ref to get_customer_trans() results
+M	sales/includes/db/cust_trans_db.inc
+
+2021-05-17 Janusz Dobrowolski
 Bug 5197: Sales Invoice email subject altered to avoid false marking by spam filters.
 M	reporting/rep107.php
 
