New Dashboard and Graphics Engine Class and rerun https://github.com/FrontAccountingERP/FA/commit/0bb9ce50f39b09b93005c45a49d9c47c4521267c https://github.com/FrontAccountingERP/FA/commit/12d2d8f602474fe08822a3755cea78e0ac81a0e2 https://frontaccounting.com/punbb/viewtopic.php?pid=39590#p39590

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,17 @@
+2021-06-15/16 Joe Hunt
+New Dashboard and Graphics Engine Class and rerun
+Now includes the SVG Vector Graphics for the core.
+Much prettier graphics.
+M	admin/dashboard.php
+M	includes/dashboard.inc
+A	reporting/fonts/FreeSans.ttf
+M	reporting/includes/class.graphic.inc
+M	reporting/includes/reports_classes.inc
+M	reporting/rep102.php
+M	reporting/rep202.php
+M	reporting/rep706.php
+M	reporting/rep707.php
+
 2021-06-15 Joe Hunt
 PHP 8 - fixed undefined array key warnings.
 M	includes/errors.inc
