Updated gettext template with 5 new strings https://github.com/FrontAccountingERP/FA/commit/08b9fe7c5bda68a29c93e51b64087ee2c62a6cdc The new strings are: Invalid password or username. Please, try again. Max day range in Documents must be a positive number. Max day range in documents days. Invoice %d from %s

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-06-18 Janusz Dobrowolski
+Updated gettext template with 5 new strings
+M	lang/new_language_template/LC_MESSAGES/empty.po
+
 2021-06-16 Joe Hunt
 Bug 5460: Inventory valuation report rep301 retained zero quantity items for items with decimal quantity units. Fixed.
 M	reporting/rep301.php
