Improved the Graphic Engine to show correct legends also in RTL. https://github.com/FrontAccountingERP/FA/commit/2fae7c89f6183f4e909e7ad2d038cf37c3854b2a https://frontaccounting.com/punbb/viewtopic.php?pid=39590#p39590

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,10 @@
 2021-06-29 Joe Hunt
+Improved the Graphic Engine to show correct legends also in RTL.
+M	config.default.php
+M	includes/dashboard.inc
+M	reporting/includes/class.graphic.inc
+
+2021-06-29 Joe Hunt
 Theme default is now RTL compatible
 M	themes/default/default.css
 
