--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-07-04 Joe Hunt
+Select item not working in purchase order and sales order entry. Fixed.
+M	includes/ui/ui_view.inc
+
 2021-06-29 Joe Hunt
 Improved the Graphic Engine to show correct legends also in RTL.
 M	config.default.php
