Wrong parameter passed to qty_cell. Fixed. https://github.com/FrontAccountingERP/FA/commit/413edb18717f1f6c19009f843465092f26f197a6 https://frontaccounting.com/punbb/viewtopic.php?pid=39650#p39650

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-07-05 Joe Hunt
+Wrong parameter passed to qty_cell. Fixed.
+M	inventory/manage/sales_kits.php
+
 2021-07-04 Joe Hunt
 Select item not working in purchase order and sales order entry. Fixed.
 M	includes/ui/ui_view.inc
