Function money_format missing in PHP > 7.4 replaced with price format https://github.com/FrontAccountingERP/FA/commit/5fd109826ff946ae6606129baa96c20273631f89 https://github.com/FrontAccountingERP/FA/commit/de3d40183070c76a9a9ad8451233c25bdf385ea3 https://frontaccounting.com/punbb/viewtopic.php?id=9399

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2021-07-23/25 Joe Hunt
+Function money_format missing in PHP > 7.4 replaced with price format
+M	includes/current_user.inc
+M	reporting/includes/pdf_report.inc
+
 2021-07-06 Joe Hunt
 Mysqli array offset errors on type bool. Fixed.
 M	admin/db/tags_db.inc
