--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-07-25 Janusz Dobrowolski
+Customer Credit Invoice: fixed invalid processing of invoice payments (triggering blank page on php8 too)
+M	sales/includes/sales_db.inc
+
 2021-07-23/25 Joe Hunt
 Function money_format missing in PHP > 7.4 replaced with price format
 M	includes/current_user.inc
