--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-07-27 Janusz Dobrowolski
+Bug 5471: Fixed direct supplier payment bug introduced by Dimension wise balance sheet items - AR/AP implemented.
+M	purchasing/includes/purchasing_db.inc
+
 2021-07-25 Janusz Dobrowolski
 Customer Credit Invoice: fixed invalid processing of invoice payments (triggering blank page on php8 too)
 M	sales/includes/sales_db.inc
