--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-08-06 Joe Hunt
+@boxygen: Credit This Option for Supplier Invoice fixed to Show Quantity Invoiced
+M	purchasing/includes/db/invoice_db.inc
+
 2021-07-27 Janusz Dobrowolski
 Bug 5471: Fixed direct supplier payment bug introduced by Dimension wise balance sheet items - AR/AP implemented.
 M	purchasing/includes/purchasing_db.inc
