@detkenn: NEW LINE bug in INVENTORY LOCATION TRANSFER fixed. https://github.com/FrontAccountingERP/FA/commit/3a07ab5b09141aa056c2c628f4f9fec79f45e85b https://frontaccounting.com/punbb/viewtopic.php?id=9390

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2021-08-06 Joe Hunt
+@detkenn: NEW LINE bug in INVENTORY LOCATION TRANSFER fixed.
+M	inventory/transfers.php
+
+2021-08-06 Joe Hunt
 @boxygen: Credit This Option for Supplier Invoice fixed to Show Quantity Invoiced
 M	purchasing/includes/db/invoice_db.inc
 
