--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-08-08 Joe Hunt
+@barbarian: GL Journal SQL bug fixed. Been around since v2.4.2.
+M	gl/includes/db/gl_journal.inc
+
 2021-08-06 Joe Hunt
 @detkenn: NEW LINE bug in INVENTORY LOCATION TRANSFER fixed.
 M	inventory/transfers.php
