--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-08-14 Joe Hunt
+@kvvaradha: Unable to void Work Order - Fixed
+M	manufacturing/includes/db/work_order_produce_items_db.inc
+
 2021-08-08 Joe Hunt
 @barbarian: GL Journal SQL bug fixed. Been around since v2.4.2.
 M	gl/includes/db/gl_journal.inc
