@braathwaate: Unable to void a sales invoice. Fixed https://github.com/FrontAccountingERP/FA/commit/d907208297556310cc7c51fcb9086869c880ab2d https://frontaccounting.com/punbb/viewtopic.php?id=9416

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2021-08-14 Joe Hunt
+@braathwaate: Unable to void a sales invoice. Fixed
+M	sales/includes/db/sales_invoice_db.inc
+
+2021-08-14 Joe Hunt
 @kvvaradha: Unable to void Work Order - Fixed
 M	manufacturing/includes/db/work_order_produce_items_db.inc
 
