@apmuthu: config.default.inc error on startup fixed https://github.com/FrontAccountingERP/FA/commit/26d7ae434469ae407f209ae3c0d3955b29107d95 https://frontaccounting.com/punbb/viewtopic.php?id=9418

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-08-16 Joe Hunt
+@apmuthu: config.default.inc error on startup fixed
+M	config.default.php
+
 2021-08-14 Joe Hunt
 @braathwaate: Unable to void a sales invoice. Fixed
 M	sales/includes/db/sales_invoice_db.inc
