@itronics: Huge transactions error in GL Transactions Report fixed https://github.com/FrontAccountingERP/FA/commit/65ebdf66d4735f6c316323cb756cefe3e4ee5320 https://frontaccounting.com/punbb/viewtopic.php?id=9411

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2021-08-16 Joe Hunt
+@itronics: Huge transactions error in GL Transactions Report fixed
+M	reporting/includes/reports_classes.inc
+
+2021-08-16 Joe Hunt
 @apmuthu: config.default.inc error on startup fixed
 M	config.default.php
 
