@boxygen: EXCHANGE-RATES.ORG rates fixed https://github.com/FrontAccountingERP/FA/commit/1c257d9ff0bfe6452423acdb8358e26bd3ce7f43 https://frontaccounting.com/punbb/viewtopic.php?pid=39978#p39978

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-09-07 Joe Hunt
+@boxygen: EXCHANGE-RATES.ORG rates fixed
+M	gl/includes/db/gl_db_rates.inc
+
 2021-08-16 Joe Hunt
 @itronics: Huge transactions error in GL Transactions Report fixed
 M	reporting/includes/reports_classes.inc
