--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-09-24 Joe Hunt
+Bug 5490: @kvvaradha - qty_done is not updated correctly on partial invoice is void fixed
+M	sales/includes/db/sales_invoice_db.inc
+
 2021-09-07 Joe Hunt
 @boxygen: EXCHANGE-RATES.ORG rates fixed
 M	gl/includes/db/gl_db_rates.inc
