--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,5 +1,9 @@
 2021-10-11 Joe Hunt
-PHP 8 fix: imagettfbbox => imageftbbox
+@kvvaradha: hook_db_prewrite was not properly used inside journal entry.
+M	gl/includes/db/gl_journal.inc
+
+2021-10-11 Joe Hunt
+@kvvaradha: PHP 8 fix - imagettfbbox => imageftbbox
 M	reporting/includes/class.graphic.inc
 
 2021-09-24 Joe Hunt
