--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2021-10-11 Joe Hunt
+Trying to access array offset on value of type bool.
+M	includes/ui/contacts_view.inc
+
+2021-10-11 Joe Hunt
 @kvvaradha: hook_db_prewrite was not properly used inside journal entry.
 M	gl/includes/db/gl_journal.inc
 
