@kvvaradha: Curly braces {} in arrays replaced with [] https://github.com/FrontAccountingERP/FA/commit/f99d4e3d028d6dc1e43716dad6188090a5f34a25 https://frontaccounting.com/punbb/viewtopic.php?pid=40122#p40122

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-10-17 Joe Hunt
+@kvvaradha: Curly braces {} in arrays replaced with []
+M	reporting/includes/Workbook.php
+
 2021-10-11 Joe Hunt
 Trying to access array offset on value of type bool.
 M	includes/ui/contacts_view.inc
