@rafat: rep109 in Print Profiles fixed https://github.com/FrontAccountingERP/FA/commit/923d58b6f916edc2f2e9b6b898e8b6bc855d949b https://frontaccounting.com/punbb/viewtopic.php?id=9502

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2021-10-17 Joe Hunt
+@rafat: rep109 in Print Profiles fixed
+M	reporting/rep109.php
+
+2021-10-17 Joe Hunt
 @kvvaradha: Curly braces {} in arrays replaced with []
 M	reporting/includes/Workbook.php
 
