--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-10-17 Janusz Dobrowolski
+Added security policy file.
+A	../SECURITY.md
+
 2021-10-17 Joe Hunt
 @rafat: rep109 in Print Profiles fixed
 M	reporting/rep109.php
