Bug 5509: Installer errors handling, password size fixed https://github.com/FrontAccountingERP/FA/commit/61f9532cca30809d96eea56effbad09b000b94de https://frontaccounting.com/punbb/viewtopic.php?pid=40133#p40133

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2021-10-24 Janusz Dobrowolski
+Bug 5509: Installer errors handling, password size fixed
+M	includes/ui/ui_input.inc
+M	install/index.php
+M	install/isession.inc
+
 2021-10-17 Janusz Dobrowolski
 Added security policy file.
 A	../SECURITY.md
