Bugs 4530, 5510: Zero Allocation Customers on list in Journal Payment fixed https://github.com/FrontAccountingERP/FA/commit/14b9fe75476f910c21dccfcf56f60b39d4567b4e https://github.com/FrontAccountingERP/FA/commit/b926fe2747940af8d53f948fc64a4ec139d7b735 https://frontaccounting.com/punbb/viewtopic.php?id=9526

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2021-10-26/28 Joe Hunt
+Bugs 4530, 5510: Zero Allocation Customers on list in Journal Payment fixed
+M	sales/includes/db/custalloc_db.inc
+M	sales/includes/db/cust_trans_db.inc
+M	sales/inquiry/customer_inquiry.php
+
 2021-10-24 Janusz Dobrowolski
 Bug 5498: Items/Fixed Assets: Fixed item image adding/update.
 M	inventory/manage/items.php
