--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-10-28 Joe Hunt
+Customer Statements shows wrong balances for Journal Entries. Fixed.
+M	reporting/rep108.php
+
 2021-10-26/28 Joe Hunt
 Bugs 4530, 5510: Zero Allocation Customers on list in Journal Payment fixed
 M	sales/includes/db/custalloc_db.inc
