Customer aging journal entry computation fixed. https://github.com/FrontAccountingERP/FA/commit/9e61d0860639941a0aceace8f4c14ced1c635e7f

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-10-29 Joe Hunt
+Customer aging journal entry computation fixed.
+M	sales/includes/db/customers_db.inc
+
 2021-10-28 Joe Hunt
 Customer Statements shows wrong balances for Journal Entries. Fixed.
 M	reporting/rep108.php
