Bugs 5522, 5523, 5524: Journal Entry Affecting in both sales and purchase and more with fix reruns https://github.com/FrontAccountingERP/FA/commit/0b50e4cbd1921c7d97da91c7967a6a9a6451d83f https://github.com/FrontAccountingERP/FA/commit/80efce5505f062318be3deb37cf5e9d68680ccde https://github.com/FrontAccountingERP/FA/commit/7d061988f9e613b45d7701fc6f1b215bf7b8de6a https://frontaccounting.com/punbb/viewtopic.php?id=9547

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2021-11-15/16 Joe Hunt
+Bugs 5522, 5523, 5524: Journal Entry Affecting in both sales and purchase and more with fix reruns
+M	gl/includes/db/gl_db_trans.inc
+M	includes/ui/items_cart.inc
+M	reporting/rep709.php
+
 2021-11-15 Joe Hunt
 Bug 5527 @bradlanier: Tax Type not displayed on initial setup if default Sales and/or Purchase Tax account deleted.
 M	taxes/db/tax_types_db.inc
