--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-11-22 Janusz Dobrowolski
+Receive Purchase Order Items blank page opening fixed for recent php versions
+M	purchasing/po_receive_items.php
+
 2021-11-15/16 Joe Hunt
 Bugs 5522, 5523, 5524: Journal Entry Affecting in both sales and purchase and more with fix reruns
 M	gl/includes/db/gl_db_trans.inc
