Updated gettext template. https://github.com/FrontAccountingERP/FA/commit/63980314a1bb4aadecfc02b94c3bede347a50755
New Strings:

Half Donut
Splines
Tables
Salesmen
Sales Total
Aging Total
New Orders
Locations
Below Reorder Level
Assembled Items
Manufactured Items
Open Workorders
Categories
Total Sales
Total Costs
Total Results
Type 2 Dimensions
Dimensions Total Balance
Dimensions Total Result
Receivables
Payables
Todays Deposits
Todays Payments
Extensions
Languages
Database Size
Results
Result
Totals
Last %s weeks Performance
Weeks
Last %s Months Performance
Month
Months
Total Customers Aged Analysis
Balances
Total Suppliers Aged Analysis
Last %s Months Cash Flow
No Data available yet!
 items are below Reorder Level
Reorder

Replaced Translations:

Purchase => Purchable Total

Case alternates as new strings:

Kits < kits already exists
Fixed Asset Classes < "Fixed Asset classes" already exists
Stock Id < "Stock ID" already exists
qty < "Qty" already exists

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2021-12-03 Janusz Dobrowolski
+Updated gettext template.
+M	lang/new_language_template/LC_MESSAGES/empty.po
+
+2021-12-03 Janusz Dobrowolski
 The secure flag was not set on session cookie. Fixed.
 M	includes/session.inc
 
