--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-12-04 Joe Hunt
+PHP 8 Errors fixed in CRUD class
+M	includes/ui/simple_crud_class.inc
+
 2021-12-03 Janusz Dobrowolski
 Updated gettext template.
 M	lang/new_language_template/LC_MESSAGES/empty.po
