--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2021-12-04 Joe Hunt
+Release 2.4.11
+M	version.php
+M	CHANGELOG.txt
+
+2021-12-04 Joe Hunt
 PHP 8 Errors fixed in CRUD class
 M	includes/ui/simple_crud_class.inc
 
@@ -202,190 +207,3 @@ M	version.php
 Updated standard CoAs to 2020-21
 M	sql/en_US-demo.sql
 M	sql/en_US-new.sql
-
-2021-06-18 Janusz Dobrowolski
-Updated gettext template with 5 new strings
-M	lang/new_language_template/LC_MESSAGES/empty.po
-
-2021-06-16 Joe Hunt
-Bug 5460: Inventory valuation report rep301 retained zero quantity items for items with decimal quantity units. Fixed.
-M	reporting/rep301.php
-
-2021-06-15/16 Joe Hunt
-New Dashboard and Graphics Engine Class and rerun
-Now includes the SVG Vector Graphics for the core.
-Much prettier graphics.
-M	admin/dashboard.php
-M	includes/dashboard.inc
-A	reporting/fonts/FreeSans.ttf
-M	reporting/includes/class.graphic.inc
-M	reporting/includes/reports_classes.inc
-M	reporting/rep102.php
-M	reporting/rep202.php
-M	reporting/rep706.php
-M	reporting/rep707.php
-
-2021-06-15 Joe Hunt
-PHP 8 - fixed undefined array key warnings.
-M	includes/errors.inc
-M	includes/session.inc
-
-2021-06-15 Joe Hunt
-PHP 8 deprecation fixes - no required parameters after optional parameters in function.
-M	reporting/includes/reporting.inc
-M	gl/includes/db/gl_db_banking.inc
-M	gl/includes/db/gl_db_rates.inc
-M	includes/current_user.inc
-M	includes/db/class.data_set.inc
-M	includes/ui/ui_lists.inc
-M	includes/ui/ui_view.inc
-M	inventory/includes/db/items_db.inc
-M	purchasing/includes/db/suppalloc_db.inc
-M	sales/includes/db/custalloc_db.inc
-
-2021-05-17 Janusz Dobrowolski
-Bug 5245: Added debtors_master.debtor_ref to get_customer_trans() results
-M	sales/includes/db/cust_trans_db.inc
-
-2021-05-17 Janusz Dobrowolski
-Bug 5197: Sales Invoice email subject altered to avoid false marking by spam filters.
-M	reporting/rep107.php
-
-2021-05-12 Joe Hunt
-Re-Run Feature 5388: Print Invoices (documents) list gets too long
-M	reporting/includes/reports_classes.inc
-
-2021-05-05 Joe Hunt
-Payments & Deposits rounding problem. Fixed.
-M	fixed_assets/includes/fixed_assets_db.inc
-M	includes/ui/items_cart.inc
-
-2021-05-02 Joe Hunt
-Bug 5429: Balance sheet report sometimes prints lines with zero amounts. Fixed.
-M	gl/includes/db/gl_db_trans.inc
-
-2021-03-29 Joe Hunt
-Feature 5388: Print Invoices (documents) list gets too long. Fixed.
-M	admin/company_preferences.php
-M	reporting/includes/reports_classes.inc
-M	sql/en_US-demo.sql
-M	sql/en_US-new.sql
-
-2021-03-10 Joe Hunt
-Function get_magic_quotes_gpc() is deprecated php7.4. Fixed.
-M	install/isession.inc
-
-2021-02-28 Joe Hunt
-Inventory Purchasing Report (rep306.php) permission SA_SALESANALYTIC => SA_SUPPLIERANALYTIC
-M	reporting/rep306.php
-
-2021-02-28 Janusz Dobrowolski
-Fixed javascript error appearing on themes using SVGElements.
-M	js/behaviour.js
-
-2021-02-19 Joe Hunt
-Bug 5360: Typo in customer_allocate.php fixed.
-M	sales/allocations/customer_allocate.php
-
-2021-02-15 Joe Hunt
-PHP 7.4 Bugs in some reports.
-M	reporting/rep101.php
-M	reporting/rep115.php
-M	reporting/rep201.php
-M	reporting/rep206.php
-M	reporting/rep306.php
-M	reporting/rep710.php
-
-2021-02-15 Joe Hunt
-Bug 5352: missing global declaration in reset_form() in attachments.php. Fixed.
-M	admin/attachments.php
-
-2021-02-15 Joe Hunt
-Bug 5351: dim dim2 not defined in lines 623, 627 of purchasing/includes/db/invoice_db.inc. Fixed.
-M	purchasing/includes/db/invoice_db.inc
-
-2021-02-11 Joe Hunt
-Bug 5332: Rep709 Tax Report - fixed multiple entries for a single tax line.
-M	reporting/rep709.php
-
-2021-02-11 Joe Hunt
-Bug 5310: DB error fixed on bank payment/transfer edit on missing fiscal year.
-M	gl/includes/db/gl_db_banking.inc
-
-2021-02-04 Joe Hunt
-Customer/Supplier Payments Recording bug fixed. 
-M	includes/ui/allocation_cart.inc
-
-2021-01-31 Joe Hunt
-Bug 5326 rerun for PHP < 5.5
-M	includes/archive.inc
-
-2021-01-21 Joe Hunt
-Fixed PHP 7.4 bug in function get_tag_name()
-M	admin/db/tags_db.inc
-
-2021-01-20 Janusz Dobrowolski
-Bug 5326: Languages/Extensions/Themes/CoA module installation warnings fixed.
-M	includes/archive.inc
-
-2021-01-20 Janusz Dobrowolski
-Bug 5322: Added message on failed Login / Timeout
-M	access/login.php
-M	includes/current_user.inc
-M	includes/session.inc
-
-2021-01-15 Joe Hunt
-Wrong security area passed in generalledger.php. Fixed.
-M	applications/generalledger.php
-
-2021-01-11 Joe Hunt
-Bug 5310: DB error when on supplier invoice edit if current fiscal year is missing. Fixed.
-M	purchasing/includes/db/invoice_db.inc
-
-2021-01-10 Joe Hunt
-Undefined variable: problemTransaction after enter a bank transfer. Fixed.
-M	gl/bank_transfer.php
-
-2021-01-10 Joe Hunt
-Rerun of Rep 704 GL A/c Txns report shows html code on Person/Item.
-M	includes/types.inc
-M	reporting/rep601.php
-M	reporting/rep704.php
-
-2021-01-09 Joe Hunt
-Call to undefined count_array() in pdf_report.inc. Fixed.
-M	reporting/includes/pdf_report.inc
-
-2021-01-09 Joe Hunt
-Rep 704 GL A/c Txns report shows html code on Person/Item if PT_WORKORDER. Fixed.
-M	reporting/rep704.php
-
-2021-01-08 Joe Hunt
-Wrong target focus in accruals.php fixed.
-M	gl/accruals.php
-
-2020-12-23/29 Janusz Dobrowolski
-Fixed volatile error on first installer page shown & rerun
-M	install/isession.inc
-
-2020-12-18 Joe Hunt
-Item Adjustments Note disable rounding of Unit Cost. Fixed.
-M	inventory/includes/item_adjustments_ui.inc
-
-2020-12-17 Joe Hunt
-Fixed Purchase Order pdf printout
-M	reporting/rep209.php
-
-2020-12-16 Joe Hunt
-Compatibility fix for commit on 2020-09-28 (php < 5.4)
-M	gl/includes/db/gl_db_bank_accounts.inc
-
-2020-12-14 Joe Hunt
-FA 2.4.9
-M	version.php
-
-2020-12-14 Janusz Dobrowolski
-Gettext templates updated
-M	install/lang/new_language_template/LC_MESSAGES/empty.po
-M	install/lang/pl_PL/LC_MESSAGES/pl_PL.po
-M	lang/new_language_template/LC_MESSAGES/empty.po
