--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2021-12-14 Janusz Dobrowolski
+Fixed parameter lists in gl_all_accounts_list_row and calls to subledger_list_cells
+M	gl/includes/ui/gl_journal_ui.inc
+M	includes/ui/ui_lists.inc
+
 2021-12-13 Joe Hunt
 Bug 5544: Notes from template are not used in recurring invoices. Fixed. 
 M	sales/create_recurrent_invoices.php
