Added SECURE_ONLY option in session.inc and auto https fix https://github.com/FrontAccountingERP/FA/commit/b1e5569c496a37d519fdf009255b11ab03589c00 https://frontaccounting.com/punbb/viewtopic.php?pid=40542#p40542

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-01-23 Janusz Dobrowolski
+Abstraction to define in session.inc for https
+M	includes/session.inc
+
 2022-01-03 Joe Hunt
 Graphics engine bugfixes
 M	reporting/includes/class.graphic.inc
