Renamed function usage to 'del_image' from missing 'delete_image' when deleting image as used in codebase. https://github.com/FrontAccountingERP/FA/commit/378bc2b13b012988e10aae40e58dc02e9ff960ed https://github.com/FrontAccountingERP/FA/commit/b17aa4908b0fab6473058313ccf67aec24aa1612 - re-run https://frontaccounting.com/punbb/viewtopic.php?id=9669

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-01-24 Joe Hunt
+Renamed function usage to 'del_image' from missing 'delete_image' when deleting image as used in codebase.
+M	inventory/manage/items.php
+
 2022-01-23 Janusz Dobrowolski
 Abstraction to define in session.inc for https
 M	includes/session.inc
