--- a/core/lang/new_language_template/LC_MESSAGES/empty.po
+++ b/core/lang/new_language_template/LC_MESSAGES/empty.po
@@ -6578,7 +6578,7 @@ msgid "Supplier"
 msgstr ""
 
 #: includes/dashboard.inc:239
-msgid "Purchable Total"
+msgid "Purchasable Total"
 msgstr ""
 
 #: includes/dashboard.inc:255 includes/dashboard.inc:319
