Typo fixed in Translatable source string ot => to https://github.com/FrontAccountingERP/FA/commit/9f9686642183c0681c71f0de7a31ae179ea9e49f https://frontaccounting.com/punbb/viewtopic.php?id=9718

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2022-03-13 Joe Hunt
+Typo fixed in Translatable source string ot => to
+M	lang/new_language_template/LC_MESSAGES/empty.po
+M	purchasing/allocations/supplier_allocate.php
+
 2022-02-05 Joe Hunt
 Typo fixed in Translatable source string Purchable => Purchasable
 M	includes/dashboard.inc
