Dashboard issues fixed with rerun https://github.com/FrontAccountingERP/FA/commit/977294dacb8c1b32fbf5826b4fc2c70949d61152 https://frontaccounting.com/punbb/viewtopic.php?pid=40724#p40724 https://github.com/FrontAccountingERP/FA/commit/b60b2ef9d7863d43398e3d2b7f9e8875d7b6800f https://github.com/FrontAccountingERP/FA/commit/e41a704af8f6aabde906f92b587c9167b5b5e955 https://frontaccounting.com/punbb/viewtopic.php?pid=40742#p40742 https://frontaccounting.com/punbb/viewtopic.php?pid=40741#p40741

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2022-03-16 Joe Hunt
+Dashboard issues fixed with rerun
+M	includes/dashboard.inc
+M	purchasing/inquiry/supplier_inquiry.php (whitespace only)
+
 2022-03-13 Joe Hunt
 Typo fixed in Translatable source string ot => to
 M	lang/new_language_template/LC_MESSAGES/empty.po
