--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2022-03-23 Joe Hunt
+Bank account transfers don't have GL dimensions. Fixed.
+M	gl/bank_transfer.php
+M	gl/includes/db/gl_db_banking.inc
+
 2022-03-16 Joe Hunt
 Dashboard issues fixed with rerun
 M	includes/dashboard.inc
