Coding bug in inventory_db.inc. Fixed. https://github.com/FrontAccountingERP/FA/commit/4eceba10c240a39176ccdfb425f709a8d584a137 https://frontaccounting.com/punbb/viewtopic.php?id=9763

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-04-11 Joe Hunt
+Coding bug in inventory_db.inc. Fixed. 
+M	inventory/includes/inventory_db.inc
+
 2022-03-23 Joe Hunt
 Bank account transfers don't have GL dimensions. Fixed.
 M	gl/bank_transfer.php
