Journal Entry - Cursor skips through dimension field. Fixed. https://github.com/FrontAccountingERP/FA/commit/2aee608d5577f034518a780f69e407efc73d7e88 https://frontaccounting.com/punbb/viewtopic.php?id=9743

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-04-13 Joe Hunt
+Journal Entry - Cursor skips through dimension field. Fixed.
+M	gl/includes/ui/gl_journal_ui.inc
+
 2022-04-11 Joe Hunt
 Coding bug in inventory_db.inc. Fixed. 
 M	inventory/includes/inventory_db.inc
