Customer balances reports: fixed balance sums for prepayment invoices and re-run https://github.com/FrontAccountingERP/FA/commit/a67b7a07178dd92bb8e8bf60b6f7b474a1cbf433 https://github.com/FrontAccountingERP/FA/commit/4618ee761a2d5ea779858009710ed43e12325c6f https://frontaccounting.com/punbb/viewtopic.php?id=9783

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,13 @@
 2022-04-29 Janusz Dobrowolski
+Customer balances reports: fixed balance sums for prepayment invoices and re-run
+M	reporting/includes/doctext.inc
+M	reporting/rep101.php
+M	reporting/rep102.php
+M	reporting/rep108.php
+M	reporting/rep115.php
+M	sales/includes/db/customers_db.inc
+
+2022-04-29 Janusz Dobrowolski
 Invoice Prepaid Orders: Added new payments column for direct review of order invoicing status.
 M	sales/includes/db/sales_order_db.inc
 M	sales/inquiry/sales_orders_view.php
