--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
-2022-04-29 Janusz Dobrowolski
+2022-05-07 Joe Hunt
+Adding Assets Classes fails. Fixed.
+M	fixed_assets/fixed_asset_classes.php
+
+2022-04-29/30 Janusz Dobrowolski
 Customer balances reports: fixed balance sums for prepayment invoices and re-run
 M	reporting/includes/doctext.inc
 M	reporting/rep101.php
