Buttons missing on Chart of Accounts page (on some editions). Fixed. https://github.com/FrontAccountingERP/FA/commit/6e555e4e06be1743570f7987d619448639650d8b https://frontaccounting.com/punbb/viewtopic.php?id=9776

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2022-05-07 Joe Hunt
+Buttons missing on Chart of Accounts page (on some editions). Fixed.
+M	gl/manage/gl_accounts.php
+
+2022-05-07 Joe Hunt
 Adding Assets Classes fails. Fixed.
 M	fixed_assets/fixed_asset_classes.php
 
