Customer balances reports: further fixes and cleanups. https://github.com/FrontAccountingERP/FA/commit/1b9208f6334e4371fa433d3b6cdc506ae0f95f98 https://frontaccounting.com/punbb/viewtopic.php?pid=41039#p41039

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,10 @@
+2022-05-11 Janusz Dobrowolski
+Customer balances reports: further fixes and cleanups.
+M	reporting/rep101.php
+M	reporting/rep102.php
+M	reporting/rep115.php
+M	sales/includes/db/customers_db.inc
+
 2022-05-07 Joe Hunt
 Buttons missing on Chart of Accounts page (on some editions). Fixed.
 M	gl/manage/gl_accounts.php
