Several PHP 8/8.1 deprecated NULL fixes https://github.com/FrontAccountingERP/FA/commit/1019600a78e74485f965c2cfe7108ca49259de1b https://github.com/FrontAccountingERP/FA/commit/017f59aff3a7c74d7eb32cb93d343d5d6eb7cd20 https://github.com/FrontAccountingERP/FA/commit/496318e80ddb0adf0706224140c492b9d3c418a4 https://github.com/FrontAccountingERP/FA/commit/a892678b33105b508b115ec20671c5a0f0c8891f https://github.com/FrontAccountingERP/FA/commit/ffc19f9a6c71002acacd8d72939b1c0e590c7178 https://github.com/FrontAccountingERP/FA/commit/e4cef39a7672370a7ae2e61c94e5267825fd1c5c

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,17 @@
+2022-006-06 Joe Hunt
+Several PHP 8/8.1 deprecated NULL fixes
+M	includes/JsHttpRequest.php
+M	includes/packages.inc
+M	includes/ui/ui_lists.inc
+M	reporting/includes/class.graphic.inc
+M	reporting/includes/pdf_report.inc
+M	reporting/rep101.php
+M	reporting/rep103.php
+M	reporting/rep201.php
+M	reporting/rep206.php
+M	reporting/rep302.php
+M	reporting/rep705.php
+
 2022-05-26 Joe Hunt
 Fixed Long product Description on Sales Quotation.
 M	reporting/rep111.php
